--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-flake8==3.9.2
-flake8-builtins==1.5.3
-pep8-naming==0.12.1
-flake8-commas==2.0.0
-flake8-variables-names==0.0.4
-flake8-import-order==0.18.1
+Flask
+Flask-RESTful
+Flask-JWT
+Flask-SQLAlchemy
